# toygres

./: .env.example  .gitignore  .toygres_history  Makefile  README.md  docker-compose.yml  init.sql  pyproject.toml  test_fuzzy.py
.agents/rules/: agents.md
toygres/: ai.py  art.py  autocomplete.py  constants.py  costs.py  db.py  execute_meta.py  execute_psql.py  execute_sql.py  explore_db.py  main.py  models.py  observer.py  utils.py
